deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubiswatch
  namespace: anubiswatch
  labels:
    app.kubernetes.io/name: anubiswatch
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: anubiswatch
---
apiVersion: v1
kind: Service
metadata:
  name: anubiswatch-cluster
  namespace: anubiswatch
  labels:
    app.kubernetes.io/name: anubiswatch
    app.kubernetes.io/component: cluster
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 7946
      protocol: TCP
      name: raft
  selector:
    app.kubernetes.io/name: anubiswatch
